# calkulator

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Licence.txt  README  README.md  calc.rc  calc.sln  calc.vcproj  conanfile.txt  conaninfo.txt  core.h  core.rc  core.vcproj  settings.yml
app/: CMakeLists.txt
app/cli/: CMakeLists.txt  main.cpp
app/win32/install/: calkulator.nsi
app/win32/res/: calc.manifest  calc.rc2
app/win32/src/: StdAfx.h  calc.h
core/: CMakeLists.txt
core/include/core/: Engine.h
core/src/: Actions.h  Engine.cpp  Token.h
core/test/: CoreLibTest.cpp  EngineTest.cpp
src/calc/: Calc.cpp  Calc.h  CalcDlg.cpp  CalcDlg.h  StdAfx.cpp
src/core/: Engine.h  Grammar.h  Parsers.h
